<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textColor="@color/gre"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/customer"
                    android:textColor="@color/gre"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:text="Date"
                    android:textColor="@color/gre"
                    android:textSize="22sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/view_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tvCustomerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Demo"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:text="2025 April, 15"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnYouSee"
                    style="@style/Button_data"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/you_see" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDupli"
                    style="@style/Button_data"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/dupli" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDelete"
                    style="@style/Button_data"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_red"
                    android:text="@string/delete" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEdit"
                    style="@style/Button_data"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_red"
                    android:text="@string/edit" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPdf"
                    style="@style/Button_data"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_red"
                    android:text="pdf" />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>