<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"

    tools:context=".activity.AddFormOneActivity">

    <include layout="@layout/action_bar" />

    <com.CB.MisureFinestre.customviews.HandwritingScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="none"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client" />

                    <EditText
                        android:id="@+id/edtClient"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />

                    <EditText
                        android:id="@+id/edtDate"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery" />

                    <EditText
                        android:id="@+id/edtDelivery"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <EditText
                        android:id="@+id/edtLocation"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/glass_window"/>

                    <EditText
                        android:id="@+id/edtGlassWindow"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"/>

                    <EditText
                        android:id="@+id/edtColor"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cremonese"/>

                    <EditText
                        android:id="@+id/edtCremonese"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/persian" />

                    <EditText
                        android:id="@+id/edtPersian"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flat" />

                    <EditText
                        android:id="@+id/edtFlat"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spacers" />

                    <EditText
                        android:id="@+id/edtSpacers"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roller_shutter"/>

                    <EditText
                        android:id="@+id/edtRollerShutter"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dumpster"/>

                    <EditText
                        android:id="@+id/edtDumpster"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mosquito_net" />

                    <EditText
                        android:id="@+id/edtMosquitoNet"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="2dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/layout_box_border"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView_form_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marble_base" />

                    <EditText
                        android:id="@+id/edtMarbleBase"
                        style="@style/EditText_form_data"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="2dp"
                        android:background="@android:color/transparent" />
                </LinearLayout>
            </LinearLayout>

<!--            <androidx.appcompat.widget.AppCompatButton-->
<!--                android:id="@+id/btnSave"-->
<!--                style="@style/Button_data"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="end"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:text="@string/save" />-->

            <LinearLayout
                android:id="@+id/piecesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" />

        </LinearLayout>

    </com.CB.MisureFinestre.customviews.HandwritingScrollView>

</LinearLayout>